@@ -197,6 +197,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - pulsemanager.{cpp,h}: use name and underscore for member variables, not
       underscore and name.
     - pulsemanager.cpp: minor non-behavior changing fixes.
+    - pulsemanager.{cpp,h}: reformat only.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
